# kate

addons/kate/project/: kateproject.cpp  kateproject.h  kateprojectplugin.cpp  kateprojectplugin.h
kate/plasma/session/: CMakeLists.txt
kate/plasma/session/applet/: CMakeLists.txt
kate/plasma/session/applet/package/: metadata.desktop
kate/plasma/session/applet/package/contents/ui/: kateprofiles.qml
kate/plasma/session/dataengine/: CMakeLists.txt  Messages.sh  kateprofilesengine.cpp  kateprofilesengine.h  kateprofilesservice.cpp  kateprofilesservice.h  plasma-dataengine-kateprofiles.desktop  plasma-dataengine-katesessions.desktop
